# Hopers-Game

./: .gitignore  LICENSE  README.md  build_artifacts.sh  build_schema.sh  shell.nix  validate_onchain_wasm.sh
contracts/fast_oracle/: Cargo.toml
contracts/fast_oracle/examples/: schema.rs
contracts/fast_oracle/schema/: execute_msg.json  query_msg.json
contracts/fast_oracle/src/: contract.rs  state.rs
contracts/fast_oracle/ts/: FastOracle.client.ts  FastOracle.types.ts  PricePrediction.client.ts  PricePrediction.types.ts  bundle.ts
contracts/price_prediction/: Cargo.toml
contracts/price_prediction/.cargo/: config
contracts/price_prediction/examples/: schema.rs
contracts/price_prediction/schema/: config.json  execute_msg.json  instantiate_msg.json  my_current_position_response.json  query_msg.json  status_response.json
contracts/price_prediction/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/price_prediction/src/testing/: tests.rs
contracts/price_prediction/ts/: PricePrediction.client.ts  PricePrediction.types.ts  bundle.ts
js/: package.json  tsconfig.json
js/src/: build-schema.ts
