[package]
name = "hopers_price_prediction"
version = "0.1.0"
authors = [ "Deliver DAO" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
hopers-bet = { path = "../../packages/hopers-bet" }
cw2 = "0.14.0"
cw20 = { version = "0.10.0" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"

